--- a/css/popup.css
+++ b/css/popup.css
@@ -1,4 +1,10 @@
+html{
+    /*background-color: #212529;*/
+}
 body {
     margin: 10px;
     width: 500px;
+}
+.container{
+    /*background-color: #212529;*/
 }
