--- a/css/popup.css
+++ b/css/popup.css
@@ -1,3 +1,13 @@
+.up-fadeIn{
+    position:relative;
+    animation: 0.2s ease 0s 1 normal forwards up-fadeIn;
+}
+.down-fadeIn{
+    position:relative;
+    animation: 0.2s ease 0s 1 normal forwards down-fadeIn;
+}
+@keyframes up-fadeIn{0%{opacity:0;transform:translateY(100px)}100%{opacity:1;transform:translateY(0px)}}
+@keyframes down-fadeIn{0%{opacity:0;transform:translateY(-100px)}100%{opacity:1;transform:translateY(0px)}}
 html{
     /*background-color: #212529;*/
 }
@@ -7,4 +17,19 @@ body {
 }
 .container{
     /*background-color: #212529;*/
+}
+#cover{
+    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left:0;
+    z-index:500;
+    display: none;
+}
+#cover img{
+    position: absolute;
+    top:45%;
+    left: 45%;
 }
